# django-swagger-render

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  update-script.sh
swagger_render/: __init__.py  exceptions.py  views.py
swagger_render/templates/swagger_render/: index.html
