[tool.poetry]
name = "django-swagger-render"
version = "0.1.1"
description = "Swagger documentation in Django"
authors = ["Emir Amanbekov <amanbekoff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
