[tool.poetry]
name = "django-swagger-render"
version = "0.1.1"
description = "Swagger documentation in Django"
authors = ["Emir Amanbekov <amanbekoff@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/progremir/django-swagger-render"
packages = [
    { include = "swagger_render" }
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
]
repository = "https://github.com/progremir/django-swagger-render"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
